SERVER-66920 Fix assertion that didn't expect exact match for seek cursor

(cherry picked from commit f2678ea3658acd35548f770ebb68c15815b46040)